# pi-native-deliverable

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  commit_msg.txt  fix.py  fix_ci.py  fix_clippy.py  fix_clippy_final.py  fix_core.py  fix_core_clippy.py  fix_default.py  fix_grep.py  fix_grep_mode.py  fix_grep_modes.py  fix_llm.py  fix_llm_clippy.py  fix_main.py  fix_main2.py  fix_main3.py  fix_manual_map.py  fix_other.py  fix_pi.py  fix_pi_clippy.py  fix_pr.py  fix_registry_clippy.py  fix_search.py  fix_test.py  fix_test_mod.py  fix_tests.py  fix_tool.py  fix_tools.py  fix_tools_only.sh  optimize.py  parse_client_request_refactor.py  patch.diff  patch.py  patch2.py  patch3.py  patch_agent.py  patch_audit.py  (+50 more)
.github/workflows/: ci.yml
.pi/: session.jsonl
crates/pi-config/: Cargo.toml
crates/pi-config/src/: lib.rs
crates/pi-core/: Cargo.toml
crates/pi-core/benches/: agent_bench.rs
crates/pi-core/src/: agent.rs  lib.rs  rpc.rs
crates/pi-core/tests/: agent_usage_and_registry.rs
crates/pi-ext/: Cargo.toml
crates/pi-ext/src/: lib.rs
crates/pi-llm/: Cargo.toml
crates/pi-llm/src/: lib.rs
crates/pi-protocol/: Cargo.toml
crates/pi-protocol/src/: lib.rs  rpc.rs  session.rs
crates/pi-search/: Cargo.toml
crates/pi-search/benches/: search_benchmarks.rs
crates/pi-search/src/: lib.rs
crates/pi-search/tests/: completion_latency.rs  search_bench_contract.rs  search_persistence_restart.rs
crates/pi-session/: Cargo.toml
crates/pi-session/benches/: session_load.rs
crates/pi-session/src/: bin_benchmark.rs  lib.rs
crates/pi-tools/: Cargo.toml
crates/pi-tools/src/: bash_test.rs  lib.rs  policy_test.rs  registry_test.rs
crates/pi-tools/tests/: audit_tests.rs  policy_test.rs
docs/: contract_index.md  roadmap.md  toolchain.md
fixtures/corpus_grep/: longline.js  simple.txt
fixtures/repo_small/: README.md
fixtures/repo_small/.pi/cache/: search-index-v1.json
fixtures/repo_small/src/: lib.rs
src/: main.rs  main.rs.orig  ui.rs
tests/: cli_commands.rs  cli_commands.rs.patch  extension_conformance.rs  extension_loader_conformance.rs  extension_policy.rs  extension_runtime_integration.rs  grep_modes.rs  print_mode.rs  print_mode_contract.rs  print_mode_output.rs  rpc_protocol_smoke.rs  rpc_session_commands.rs  search_fuzzy_ordering.rs  session_branch_navigation.rs  session_compact_test.rs  session_path_guards.rs  session_roundtrip.rs  skill_manifest_validation.rs  tool_audit.rs  tool_audit_log.rs  tool_sandbox.rs  tool_sandbox.rs.orig
tools/: precommit_checks.sh
