[package]
name = "pi-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
ignore.workspace = true
strsim.workspace = true
regex.workspace = true
uuid.workspace = true
thiserror.workspace = true
notify.workspace = true
futures.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion = "0.5"
tempfile = "3.17"

[[bench]]
name = "search_benchmarks"
harness = false
