[package]
name = "pi-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
pi-protocol = { path = "../pi-protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true

[[bin]]
name = "benchmark"
path = "src/bin_benchmark.rs"
[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "session_load"
harness = false
